# Zadanie-rekrutacyjne-Python-Sta-

./: .editorconfig  .env.example  Makefile  README.md  pyproject.toml  ruff.toml
articles-scraper/: main.py  scrapy.cfg
articles-scraper/articles_scraper/: items.py  middlewares.py  settings.py
articles-scraper/articles_scraper/spiders/: article_spider.py
articles-scraper/services/: config_service.py
articles_scrape/: main.py  scrapy.cfg
articles_scrape/articles_scrape/: items.py  middlewares.py  settings.py
articles_scrape/articles_scrape/constants/: urls.py
articles_scrape/articles_scrape/core/: base_parser.py  bistrolubie_service.py  chip_service.py  newonce_service.py  spidersweb_service.py
articles_scrape/articles_scrape/spiders/: articles_scrape.py
